--- a/common/buttons.scss
+++ b/common/buttons.scss
@@ -149,3 +149,46 @@
         border-color: $purple-color;
     }
 }
+
+@mixin like-button {
+    .like-button {
+        display: flex;
+        width: 40px;
+        height: 20px;
+        border-radius: 10px;
+        display: flex;
+        padding-left: 3px;
+        padding-right: 5px;
+        cursor: pointer;
+        border: 1px solid $dark-shade-25-color;
+        &__heart {
+            background-image: url(../src/img/heart.svg);
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 20px;
+            height: 20px;
+        }
+        &__counter {
+            margin-top: 1px;
+            width: 100%;
+            height: 15px;
+            border-radius: 50%;
+            text-align: center;
+            @include body-text;
+            line-height: 0;
+            font-size: 10px;
+            color: $dark-shade-25-color;
+            cursor: pointer;
+            
+        } 
+        &__active {
+            border: 1px solid $purple-color;
+            div{
+                background-image: url(../src/img/favorite.svg);
+            }
+            input {
+                color: $purple-color;
+            }
+        }
+    }
+}
