--- a/form_elements/src/includes/small-buttons-common.scss
+++ b/form_elements/src/includes/small-buttons-common.scss
@@ -40,5 +40,11 @@
         justify-content: space-between;
         max-width: 90px;
         @include like-button;
+    }
+    &__rate {
+        display: flex;
+        justify-content: space-between;
+        max-width: 260px;
+        @include rate-button;
     }   
 }
