--- a/common/buttons-mixins.pug
+++ b/common/buttons-mixins.pug
@@ -7,3 +7,12 @@ mixin like-button(value, active, action)
         .like-button
             .like-button__heart
             input(type='text', value= value, action= action, readonly).like-button__counter
+
+mixin rate-button(value)
+    .rate-button    
+      - for (var i=0; i<value; i++) {     
+            .rate-button__star.rate-button__checked
+      - }
+      -  for (var i=0; i<5-value; i++) {
+            .rate-button__star
+      -  }
