small buttons block pixel perfect match, file system update

--- a/form_elements/src/includes/small-buttons-ui-kit.scss
+++ b/form_elements/src/includes/small-buttons-ui-kit.scss
@@ -3,10 +3,26 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    &__description{
-        height: 35px;
-        align-self: flex-start;
+    &__checkbox{
+        height: 27px;
         @include title
+    }
+    &__radio{
+        height: 24px;
+        @include title;
+    }
+    &__toggle {
+        height: 24px;
+        @include title;
+    }
+    &__like {
+        margin-top: 3px;
+        height: 26px;
+        @include title;
+    }
+    &__rate {
+        height: 25px;
+        @include title;
     }
     &__option {
         display: flex;
