--- a/form_elements/src/includes/small-buttons/radio.pug
+++ b/form_elements/src/includes/small-buttons/radio.pug
@@ -1,7 +1,7 @@
-.button-option_horizontal_radio
-    .button-option__input
-        input(type="radio", name='sex', id='male', checked).button-option__radio
-        label(for="male") Мужчина
-    .button-option__input
-        input(type="radio", name='sex', id='female').button-option__radio
-        label(for="female") Женщина
+.radio-buttons
+    form(action="#").radio-buttons__form
+        input(type="radio", name='sex', id='male', checked).radio-buttons__input
+        label(for="male").radio-buttons__label Мужчина
+    form(action="#").radio-buttons__form
+        input(type="radio", name='sex', id='female').radio-buttons__input
+        label(for="female").radio-buttons__label Женщина
