--- a/form_elements/src/includes/small-buttons/rate.pug
+++ b/form_elements/src/includes/small-buttons/rate.pug
@@ -1,5 +1,4 @@
 include ../../../../common/buttons-mixins.pug
-.button-option
-    .button-option__rate
-        +rate-button(4)
-        +rate-button(5)
+.rate-buttons
+    +rate-button(4)
+    +rate-button(5)
