--- a/form_elements/src/includes/small-buttons/toggle.pug
+++ b/form_elements/src/includes/small-buttons/toggle.pug
@@ -1,7 +1,7 @@
-.button-option
-    .button-option__input
-        input(type="checkbox", id="toggle-checked", checked).button-option__toggle
-        label(for="toggle-checked") Получать спецпредложения
-    .button-option__input
-        input(type="checkbox", id="toggle").button-option__toggle
-        label(for="toggle") Получать спецпредложения
+.toggle-buttons
+    .toggle-buttons__form
+        input(type="checkbox", id="toggle-checked", checked).toggle-buttons__input
+        label(for="toggle-checked").toggle-buttons__label Получать спецпредложения
+    .toggle-buttons__form
+        input(type="checkbox", id="toggle").toggle-buttons__input
+        label(for="toggle").toggle-buttons__label Получать спецпредложения
