--- a/form_elements/src/includes/small-buttons.pug
+++ b/form_elements/src/includes/small-buttons.pug
@@ -1,19 +1,19 @@
 
 .small-buttons
     .small-buttons__option
-        .small-buttons__description checkbox buttons
+        .small-buttons__checkbox checkbox buttons
         include small-buttons/checkbox
     .small-buttons__option
-        .small-buttons__description radio buttons
+        .small-buttons__radio radio buttons
         include small-buttons/radio
     .small-buttons__option
-        .small-buttons__description toggle
+        .small-buttons__toggle toggle
         include small-buttons/toggle
     .small-buttons__option
-        .small-buttons__description like button
+        .small-buttons__like like button
         include small-buttons/like
     .small-buttons__option
-        .small-buttons__description rate button
+        .small-buttons__rate rate button
         include small-buttons/rate
         
 
