--- a/form_elements/src/includes/small-buttons/like.pug
+++ b/form_elements/src/includes/small-buttons/like.pug
@@ -1,6 +1,5 @@
 include ../../../../common/buttons-mixins.pug
-.button-option
-    .button-option__like
-        +like-button(2, "inactive")
-        +like-button(12, "active")
+.like-buttons
+    +like-button(2, "inactive")
+    +like-button(12, "active")
 script(src="./js/like-button.js")
