--- a/form_elements/src/includes/main-buttons.pug
+++ b/form_elements/src/includes/main-buttons.pug
@@ -1,10 +1,5 @@
 .buttons
     .buttons__range-slider
-        div Range slider
-        input(type="range", name='price', id='price', min='0', max='20000')
+        include main-buttons/range-slider
     .buttons__main
-        div Buttons
-        button click me
-        button click me
-        div 
-            button перейти к оплате
+script(src="./js/range-slider.js")
