more text fields code refactoring

--- a/form_elements/src/includes/dropdown-guests-default.pug
+++ b/form_elements/src/includes/dropdown-guests-default.pug
@@ -9,5 +9,5 @@ include ../../../common/dropdown-mixins
             +dropdown("Дети", 0)
             +dropdown("Младенцы", 0)
         .guests__buttons
-            .guests__clear Очистить
+            .guests__clear.button-hidden Очистить
             .guests__submit Применить
