--- a/form_elements/src/includes/dropdown-guests-example.pug
+++ b/form_elements/src/includes/dropdown-guests-example.pug
@@ -9,6 +9,6 @@ include ../../../common/dropdown-mixins
             +dropdown("Дети", 1)
             +dropdown("Младенцы", 0)
         .guests__buttons
-            .guests__clear.button-appearance Очистить
+            .guests__clear Очистить
             .guests__submit Применить
     
