--- a/form_elements/src/includes/small-buttons/radio.pug
+++ b/form_elements/src/includes/small-buttons/radio.pug
@@ -1,7 +1,7 @@
 .radio-buttons
-    form(action="#").radio-buttons__form
-        input(type="radio", name='sex', id='male', checked).radio-buttons__input
+    .radio-buttons__form
+        input(type="radio", name='sex', id='male').radio-buttons__input
         label(for="male").radio-buttons__label Мужчина
-    form(action="#").radio-buttons__form
+    .radio-buttons__form
         input(type="radio", name='sex', id='female').radio-buttons__input
         label(for="female").radio-buttons__label Женщина
