buttons block 'click me' added

--- a/form_elements/src/includes/main-buttons.pug
+++ b/form_elements/src/includes/main-buttons.pug
@@ -1,5 +1,5 @@
-.buttons
-    .buttons__range-slider
+.main-buttons
+    .main-buttons__range-slider
         include main-buttons/range-slider
-    .buttons__main
-script(src="./js/range-slider.js")
+    .main-buttons__buttons
+        include main-buttons/buttons
