--- a/form_elements/src/includes/small-buttons/radio.pug
+++ b/form_elements/src/includes/small-buttons/radio.pug
@@ -1,6 +1,6 @@
 .radio-buttons
     .radio-buttons__form
-        input(type="radio", name='sex', id='male').radio-buttons__input
+        input(type="radio", name='sex', id='male', checked).radio-buttons__input
         label(for="male").radio-buttons__label Мужчина
     .radio-buttons__form
         input(type="radio", name='sex', id='female').radio-buttons__input
