--- a/headers_footers/src/index.pug
+++ b/headers_footers/src/index.pug
@@ -19,7 +19,7 @@ html(lang="en")
                         .button
                             a(href="#").buttons__transparent login
                         .button
-                            a(href="#").buttons__purple register
+                            a(href="#").buttons__purple Зарегистрироваться
             .bar
                 .bar__content
                     .main-menu
