--- a/common/buttons.scss
+++ b/common/buttons.scss
@@ -9,25 +9,24 @@
 
     color: $purple-color;
     text-transform: uppercase;
-
-    background-color: #fff;
+    background-color: #FFF;
     background-clip: padding-box;
     border: 2px solid transparent;
-    border-radius: 20px;
+    border-radius: 22px;
 
-    padding: 8px 17.5px;
+    padding: 12px 17.5px;
     margin: auto;
     position: relative;
     z-index: 1;
+    
     &::before {
         content: '';
         position: absolute;
         top: 0; left: 0; bottom: 0; right:0;
         margin: -2px;
         z-index: -1;
-
         background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-        border-radius: 20px;
+        border-radius: 22px;
     }
 
 }
@@ -41,16 +40,18 @@
     text-transform: uppercase;
     font-size: 12px;
     font-weight: bold;
-
     color: #FFF;
-    padding: 9.5px 20px;
+    padding: 9px 20px;
     border-radius: 22px;
-	background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+    background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+    text-align: center;
+    display: block;
 }
 
 @mixin purple-button-hover {
     opacity: 0.5;
 }
+
 
 //small buttons
 
