--- a/headers_footers/src/main.scss
+++ b/headers_footers/src/main.scss
@@ -53,7 +53,6 @@
 	height: 70px;
 	margin: auto;
 	background: #FFFFFF;
-	
 	margin-bottom: 40px;
 	box-shadow: 0px 10px 20px $dark-shade-05-color;	
 	
@@ -80,7 +79,7 @@
 .buttons {
 	width: 250px;
 	margin-left: 30px;
-
+	align-items: center;
 	display: flex;
 	justify-content: space-between;
 	&__transparent{
