--- a/form_elements/src/main.scss
+++ b/form_elements/src/main.scss
@@ -31,6 +31,10 @@
 
 //buttons common 
 @import '../src/includes/main-buttons/buttons.scss';
+
+//pagination
+@import '../src/includes/main-buttons/pagination.scss';
+
 //fonts
 @font-face {
 	font-family: 'Montserrat';
