--- a/form_elements/src/includes/main-buttons.pug
+++ b/form_elements/src/includes/main-buttons.pug
@@ -3,3 +3,5 @@
         include main-buttons/range-slider
     .main-buttons__buttons
         include main-buttons/buttons
+    .main-buttons__pagination
+        include main-buttons/pagination
