--- a/form_elements/src/includes/small-buttons/checkbox.pug
+++ b/form_elements/src/includes/small-buttons/checkbox.pug
@@ -1,11 +1,11 @@
 .checkbox-buttons
-    form(action="#").checkbox-buttons__form
+    .checkbox-buttons__form
         input(type="checkbox", name='smoking', id='smoking').checkbox-buttons__input
         label(for="smoking").checkbox-buttons__label Можно курить
-    form(action="#").checkbox-buttons__form 
+    .checkbox-buttons__form 
         input(type="checkbox", name='pets', id='pets', checked).checkbox-buttons__input
         label(for="pets").checkbox-buttons__label Можно с питомцами
-    form(action="#").checkbox-buttons__form   
+    .checkbox-buttons__form   
         input(type="checkbox", name='guests-allowed', id='guests-allowed', checked).checkbox-buttons__input
         label(for="guests-allowed").checkbox-buttons__label Можно пригласить гостей (до 10 человек)
 
