rich checkbox buttons added

--- a/common/buttons.scss
+++ b/common/buttons.scss
@@ -103,8 +103,7 @@
     &+label::before {
         border-radius: 4px;
         background-repeat: no-repeat;
-        background-position: center center;
-        background-size: 50% 50%;
+        background-position: 50% 59%;
         flex-shrink: 0;
         flex-grow: 0;
     }
