--- a/form_elements/src/index.pug
+++ b/form_elements/src/index.pug
@@ -18,7 +18,7 @@ html(lang="ru")
             include includes/dropdown-guests-default
             include includes/dropdown-guests-example
             include includes/expandable-list
-        
+            include includes/rich-checkbox-buttons
         script(src="js/dropdown.js")
         
                     
