--- a/form_elements/src/main.scss
+++ b/form_elements/src/main.scss
@@ -39,6 +39,9 @@
 @import '../src/includes/expandable-list.scss';
 @import '../../common/expandable-checkbox-list.scss';
 
+//rich checkbox buttons
+@import '../src/includes/rich-checkbox-buttons.scss';
+
 //fonts
 @font-face {
 	font-family: 'Montserrat';
