bullet list added

--- a/form_elements/src/main.scss
+++ b/form_elements/src/main.scss
@@ -42,6 +42,9 @@
 //rich checkbox buttons
 @import '../src/includes/rich-checkbox-buttons.scss';
 
+//bullet list
+@import '../src/includes/bullet-list.scss';
+
 //fonts
 @font-face {
 	font-family: 'Montserrat';
