--- a/form_elements/src/index.pug
+++ b/form_elements/src/index.pug
@@ -19,6 +19,7 @@ html(lang="ru")
             include includes/dropdown-guests-example
             include includes/expandable-list
             include includes/rich-checkbox-buttons
+            include includes/bullet-list
         script(src="js/dropdown.js")
         
                     
