benefits block added to form elements page

--- a/form_elements/src/index.pug
+++ b/form_elements/src/index.pug
@@ -20,6 +20,7 @@ html(lang="ru")
             include includes/expandable-list
             include includes/rich-checkbox-buttons
             include includes/bullet-list
+            include includes/benefits
         script(src="js/dropdown.js")
         
                     
