--- a/form_elements/src/main.scss
+++ b/form_elements/src/main.scss
@@ -45,6 +45,9 @@
 //bullet list
 @import '../src/includes/bullet-list.scss';
 
+//benefits
+@import '../src/includes/benefits.scss';
+
 //fonts
 @font-face {
 	font-family: 'Montserrat';
