comment added to form elements page

--- a/form_elements/src/index.pug
+++ b/form_elements/src/index.pug
@@ -21,6 +21,7 @@ html(lang="ru")
             include includes/rich-checkbox-buttons
             include includes/bullet-list
             include includes/benefits
+            include includes/comment
         script(src="js/dropdown.js")
         
                     
