--- a/form_elements/src/main.scss
+++ b/form_elements/src/main.scss
@@ -48,6 +48,9 @@
 //benefits
 @import '../src/includes/benefits.scss';
 
+//comment
+@import '../src/includes/comment.scss';
+
 //fonts
 @font-face {
 	font-family: 'Montserrat';
@@ -66,12 +69,15 @@
 }
 
 .form-elements {
-    max-width: 1440px;
+    max-width: 1000px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 50px;
-    grid-row-gap: 20px;
+    grid-column-gap: 125px;
+    grid-row-gap: 100px;
     margin: 140px;
+}
+.jhl {
+    border: 1px solid #000;
 }
 
 
