--- a/form_elements/src/index.pug
+++ b/form_elements/src/index.pug
@@ -10,6 +10,7 @@ html(lang="ru")
 
 
     body
+        img(src="./img/logo-bw.svg", alt="").logo-bw
         .form-elements
             include includes/text-fields
             include includes/small-buttons
