--- a/form_elements/src/main.scss
+++ b/form_elements/src/main.scss
@@ -13,7 +13,7 @@
 //dropdowns styles
 @import '../src/includes/dropdown-guests-default.scss';
 @import '../src/includes/dropdown-rooms-default.scss';
-
+@import '../src/includes/dropdown.scss';
 //buttons styles
 @import '../src/includes/small-buttons-ui-kit.scss';
 @import '../src/includes/main-buttons.scss';
@@ -65,19 +65,18 @@
 	src: url('fonts/Montserrat-Bold.eot');
 	src: local('☺'), url('fonts/Montserrat-Bold.woff') format('woff'), url('fonts/Montserrat-Bold.ttf') format('truetype'), url('fonts/Montserrat-Bold.svg') format('svg');
 	font-weight: 700;
-	font-style: bold;
+	font-style: normal;
 }
-
+.logo-bw {
+    margin: 30px 0 0 30px;
+}
 .form-elements {
     max-width: 1000px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 125px;
-    grid-row-gap: 100px;
-    margin: 140px;
-}
-.jhl {
-    border: 1px solid #000;
+    grid-column-gap: 72px;
+    grid-row-gap: 53px;
+    margin: 63px 141px;
 }
 
 
@@ -85,56 +84,4 @@
 //classes for dropdowns js scripts
 // do separate
 
-.button-hidden {
-    visibility: hidden;
-}
 
-.button-pointer {
-    cursor: pointer;
-}
-
-.hidden {
-    display: none;
-}
-.border {
-    border-radius: 4px;
-    border-color: $dark-shade-25-color;
-}
-.border-focus {
-    border-radius: 4px 4px 0 0;
-    border-color: $dark-shade-50-color;
-}
-
-.common-dropdown {
-    position: absolute;
-    background-color: #FFF;
-    z-index: 1;
-    margin-top: -1px;
-    border: 1px solid $dark-shade-50-color;
-    border-radius: 0 0 4px 4px;
-    padding: 7px;
-    padding-top: 5px;
-    padding-left: 15px;
-    &__rows {
-        height: 103px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-    &__buttons {
-        margin-top: 25px;
-        margin-bottom: 6px;
-        display: flex;
-        justify-content: space-between;
-        
-    }
-    &__clear {
-        @include h3-text;
-        color: $dark-shade-50-color;
-    }
-    &__submit {
-        @include h3-text;
-        cursor: pointer;
-        color: $purple-color;
-    }
-}
