--- a/cards/src/includes/datepicker-calendar.scss
+++ b/cards/src/includes/datepicker-calendar.scss
@@ -1,79 +1,150 @@
+
 .datepicker {
+    padding: 10px 15px;
+    width: 287px;
+        
+    &--pointer {
+        display: none;
+    }
+    &-inline .datepicker {
+        box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+        border: 1px solid rgba(31, 32, 65, 0.05);
+        border-radius: 4px;
+            
+        height: 369px;
+    }
+    &--nav {
+        margin-bottom: 24px;
+        border: none;
+        &-title {
+            @include h2-text;
+            opacity: 1;
+        }
+        &-action {
+            
+            & svg {
+                width: 0;
+            }
+            &:first-child {
+                background-image: url('./img/arrow_back.svg');
+                background-repeat: no-repeat;
+                background-position: 50% 50%;
+                color: red !important;
+                margin-left: -4px;
+            }
+            &:last-child {
+                background-image: url('./img/arrow_forward.svg');
+                background-repeat: no-repeat;
+                background-position: 50% 50%;
+                margin-right: -4px;
+            }
+            
+        }
+    }
     &--day-name {
         color: $purple-color;
         font-family: Montserrat;
         font-weight: bold;
-    }
-    &--cell.-range-from- {
-        border: none;
-        border-radius: 50%;
-        color: #FFF;
-        background: $purple-color;
-        font-weight: bold;
-        &::after {
-            content: '';
-            height: 100%;
-            width: 60%;
-            position: absolute;
-            left: 13.8px;
-            background: $purple-color;
-            opacity: 0.25;
-            z-index: -1;
-
-        }
-    }
-    &--cell.-range-to- {
-        border: none;
-        border-radius: 50%;
-        color: #FFF;
-        background: $purple-color;
-        font-weight: bold;
-        &::before {
-            content: '';
-            height: 100%;
-            width: 60%;
-            position: absolute;
-            right: 13.8px;
-            background-color: $purple-color;
-            opacity: 0.25;
-            z-index: -1;
-        }
+        text-transform: capitalize;
     }
     &--cells {
         font-family: Montserrat;
         color: $dark-shade-50-color;
+        font-size: 12px;
+        width: 280px;
+        margin-top: 15px;
     }
-    &--cell.-current- {
-        background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
-        border-radius: 50%;
-        color: #FFF;
-        font-weight: bold;
-    }
-    &--cell.-selected- {
-        background: $purple-color;
-        &.-current- {
-            background: $purple-color;
+    &--cell {
+        height: 40px;
+        width: 40px;
+        &-year- {
+            color: red !important;
         }
-        &.-focus- {
+        &.-range-from- {
+            border: none;
+            border-radius: 50%;
+            color: #FFF;
             background: $purple-color;
-            &::after, &::before {
-                background: none;
+            font-weight: bold;
+            &::after {
+                content: '';
+                height: 100%;
+                width: 60%;
+                position: absolute;
+                left: 16px;
+                background: $purple-color;
+                opacity: 0.25;
+                z-index: -1;
+
             }
         }
-    }
-    &--cell.-in-range- {
-        &::before {
-            content: '';
-            z-index: -1;
+        &.-range-to- {
+            border: none;
+            border-radius: 50%;
+            color: #FFF;
             background: $purple-color;
-            opacity: 0.25;
-            width: 100%;
-            height: 100%;
-            position: absolute;
+            font-weight: bold;
+            &::before {
+                content: '';
+                height: 100%;
+                width: 60%;
+                position: absolute;
+                right: 16px;
+                background-color: $purple-color;
+                opacity: 0.25;
+                z-index: -1;
+            }
         }
-        background: none;
-        color: $dark-shade-50-color;
-        
-        
+        &.-current- {
+            background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
+            border-radius: 50%;
+            color: #FFF;
+            font-weight: bold;
+        }
+        &:hover {
+           color: #fff;
+        font-weight: bold;
+        background-color: $purple-color;
+        border-radius: 50%; 
+        }
+        &.-selected- {
+            background: $purple-color;
+            &.-current- {
+                background: $purple-color;
+            }
+            &.-focus- {
+                background: $purple-color;
+                &::after, &::before {
+                    background: none;
+                }
+            }
+        }
+        &.-in-range- {
+            &::before {
+                content: '';
+                z-index: -1;
+                background: $purple-color;
+                opacity: 0.25;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+            }
+            background: none;
+            color: $dark-shade-50-color;            
+        }   
+    }
+    
+    //days in other month
+    &--cell-day.-other-month-, .datepicker--cell-year.-other-decade {
+        color: $dark-shade-25-color;
+        &:hover {
+            background: $purple-color;
+            color: #fff;
+            font-weight: bold;
+            border-radius: 50%;
+        }
+        &.-selected- {
+            background-color: $purple-color;
+        }
     }
 }
