search form styles and script added

--- a/cards/src/includes/datepicker-calendar.pug
+++ b/cards/src/includes/datepicker-calendar.pug
@@ -1,4 +1,5 @@
 script(src="https://code.jquery.com/jquery-1.12.4.js")
 script(src="./js/datepicker.js")
-.datepicker-here(data-range='true')
+.datepicker-calendar
+    .datepicker-here(data-range='true')
 
