--- a/common/inputs-mixins.pug
+++ b/common/inputs-mixins.pug
@@ -14,11 +14,11 @@ mixin input-text(placeholder, name, action)
         input(type="text" placeholder= placeholder name= name).text-form__input
 
 mixin input-dropdown(placeholder, name, action)
-    form(action= action method="post", id= id).dropdown-form
+    form(action= action method="post").dropdown-form
         input(type="text" placeholder= placeholder name= name readonly).dropdown-form__input
         input(type="button").dropdown-form__arrow
 
 mixin input-date(placeholder, name, action)
-    form(action= action method="post", id= id).dropdown-form
+    form(action= action method="post").dropdown-form
         input(type="text" placeholder= placeholder name= name readonly).dropdown-form__input.datepicker-here
         input(type="button").dropdown-form__arrow
