price calculation card added

--- a/cards/src/index.pug
+++ b/cards/src/index.pug
@@ -16,3 +16,5 @@ html(lang="en")
             .cards__column
                 include includes/datepicker-calendar
                 include includes/rooms
+        script(src="./js/dropdown.js")
+        
