--- a/cards/src/main.scss
+++ b/cards/src/main.scss
@@ -4,6 +4,7 @@
 
 //primitives
 @import '../../common/inputs.scss';
+@import '../../form_elements/src/includes/text-fields.scss';
 
 //search-form
 @import '../src/includes/search-form.scss';
