--- a/cards/src/index.pug
+++ b/cards/src/index.pug
@@ -7,6 +7,7 @@ html(lang="en")
         script(src="./main.js")
     body
         .cards
+            img(src="./img/logo.svg", alt="").cards__logo
             .cards__column
                 include includes/search-form
                 include includes/registration
