--- a/common/rooms-mixin.scss
+++ b/common/rooms-mixin.scss
@@ -10,28 +10,29 @@
         display: flex;
         justify-content: space-between;
         top: 21%;
-        &::before {
-            content: "";
-            background: url('../src/img/expand_more.svg');
-            background-repeat: no-repeat;
-            background-position: 50% 50%;
-            width: 44px;
-            height: 44px;
-            display: block;
-            cursor: pointer;
-        }
-        &::after {
-            content: "";
-            background: url('../src/img/expand_more.svg');
-            background-repeat: no-repeat;
-            background-position: 50% 50%;
-            width: 44px;
-            height: 44px;
-            display: block;
-            transform: rotate(180deg);
-            cursor: pointer;
-        }
     }
+    &__before a {
+        background: url('../src/img/expand_more.svg');
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
+        width: 44px;
+        height: 44px;
+        display: block;
+        cursor: pointer;
+        
+    }
+    &__after a {
+        background: url('../src/img/expand_more.svg');
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
+        width: 44px;
+        height: 44px;
+        display: block;
+        transform: rotate(180deg);
+        cursor: pointer;
+    
+    }
+    
     &__img {
         margin-top: 0.8px;
         margin-left: 0.8px;
