headers and footers content changed

--- a/headers_footers/src/includes/footers/copybar.pug
+++ b/headers_footers/src/includes/footers/copybar.pug
@@ -1,6 +1,9 @@
 .copybar-footer
-    .copybar-footer__text Copyright © 2018 Toxin UI Kit. All rights reserved.
+    .copybar-footer__text Copyright © 2018 Toxin отель. Все права зачищены.
     .copybar-footer__socials
-        img(src="img/twitter.png", alt="")
-        img(src="img/facebook.png", alt="")
-        img(src="img/inst.png", alt="")
+        a(href="#")
+            img(src="img/twitter.png", alt="")
+        a(href="#")
+            img(src="img/facebook.png", alt="")
+        a(href="#")
+            img(src="img/inst.png", alt="")
