--- a/headers_footers/src/includes/headers/navigation.pug
+++ b/headers_footers/src/includes/headers/navigation.pug
@@ -1,9 +1,8 @@
 include ../../../../common/header-navigation-mixins
 nav.navigation
     ul.navigation__list
-        +navigation-menu-main('home', '#')
-        +navigation-menu('about us', '#')
-        +navigation-menu-sub('services', '#')
-        +navigation-menu('careers', '#')
-        +navigation-menu('news', '#')
-        +navigation-menu('documentation', '#')
+        +navigation-menu-main('о нас', '#')
+        +navigation-menu-sub('услуги', '#')
+        +navigation-menu('вакансии', '#')
+        +navigation-menu('новости', '#')
+        +navigation-menu-sub('соглашения', '#')
