--- a/headers_footers/src/index.pug
+++ b/headers_footers/src/index.pug
@@ -17,9 +17,9 @@ html(lang="en")
                             include includes/headers/navigation
                     .buttons
                         .button
-                            a(href="#").buttons__transparent login
+                            a(href="#").buttons__transparent войти
                         .button
-                            a(href="#").buttons__purple Зарегистрироваться
+                            a(href="#").buttons__purple зарегистрироваться
             .bar
                 .bar__content
                     .main-menu
