--- a/headers_footers/src/includes/footers/creative.pug
+++ b/headers_footers/src/includes/footers/creative.pug
@@ -1,8 +1,11 @@
 .creative-footer
     .creative-footer__logo
         img(src="img/logo.svg", alt="")
-    .creative-footer__text Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis.
+    .creative-footer__text Copyright © 2018 Toxin отель. Все права зачищены.
     .creative-footer__socials
-        img(src="img/twitter.png", alt="")
-        img(src="img/facebook.png", alt="")
-        img(src="img/inst.png", alt="")
+        a(href="#")
+            img(src="img/twitter.png", alt="")
+        a(href="#")
+            img(src="img/facebook.png", alt="")
+        a(href="#")
+            img(src="img/inst.png", alt="")
