--- a/headers_footers/src/includes/footers/widget.pug
+++ b/headers_footers/src/includes/footers/widget.pug
@@ -4,30 +4,28 @@ include ../../../../common/inputs-mixins
 .widget-footer
     .widget-footer__information
         img(src="img/logo.svg", alt="").logo
-        .widget-footer__text Lorem ipsum dolor sit amet consectetur adipiscing elit aliquam eget nullam pellentesque aliquam curabitur cociis.
+        .widget-footer__text Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
     nav.widget-footer__navigation
         ul.widget-footer__list
-            +widget-list-title("navigation")
-            +widget-list("About Us", '#')
-            +widget-list("News", '#')
-            +widget-list("Support", '#')
-            +widget-list("Products", '#')
-        ul.widget-footer__list
-            +widget-list-title("about us")
-            +widget-list("Who we are", '#')
-            +widget-list("Our team", '#')
-            +widget-list("Careers", '#')
-            +widget-list("Investors", '#')    
+            +widget-list-title("Навигация")
+            +widget-list("О нас", '#')
+            +widget-list("Новости", '#')
+            +widget-list("Служба поддержки", '#')
+            +widget-list("Услуги", '#')
+        ul.widget-footer__list.widget-footer__list_shifted
+            +widget-list-title("о нас")
+            +widget-list("о сервисе", '#')
+            +widget-list("наша команда", '#')
+            +widget-list("вакансии", '#')
+            +widget-list("инвесторы", '#')    
     
         ul.widget-footer__list
-            +widget-list-title("support")
-            +widget-list("Documentation", '#')
-            +widget-list("Community", '#')
-            +widget-list("Get in Touch", '#')
+            +widget-list-title("служба поддержки")
+            +widget-list("соглашения", '#')
+            +widget-list("сообщества", '#')
+            +widget-list("связь с нами", '#')
     .widget-footer__information
-        .widget-footer__title_last Subscribe to our newsletter
-        .widget-footer__text Receive our latest news and promotions in your inbox!
+        .widget-footer__title_last Подписка
+        .widget-footer__text Получайте специальные предложения и новости сервиса
         .widget-footer__form
-            +input-email("Your email address")
-            
-    
+            +input-email("Email")
