--- a/headers_footers/src/includes/headers/designer.scss
+++ b/headers_footers/src/includes/headers/designer.scss
@@ -5,7 +5,7 @@
         width: 1px;
         height: 30px;
         background: rgba(31, 32, 65, 0.1);
-        margin: 0 30px;
+        margin: 0 20px 0 22px;
     }
     &__name {
         @include body-text;
