--- a/headers_footers/src/includes/headers/navigation.scss
+++ b/headers_footers/src/includes/headers/navigation.scss
@@ -6,17 +6,28 @@
 
         @include body-text;
         color: $dark-shade-50-color;
-        text-transform: capitalize;
         white-space: nowrap;
     }
     &__link {
+        &::first-letter{
+            text-transform: uppercase;
+        }
         &_main {
             font-weight: bold;
             color: $dark-shade-75-color;
+            margin-right: 2px;
+            &::first-letter{
+                text-transform: uppercase;
+            }
         }
         &_sub{
+            margin-left: -2px;
+            margin-right: 4px;
             img {
-                margin-left: 4px;
+                margin-left: 6.5px;
+            }
+            &::first-letter{
+                text-transform: uppercase;
             }
         }
     }
