--- a/pages/Landing_page/src/main.scss
+++ b/pages/Landing_page/src/main.scss
@@ -4,9 +4,17 @@
 //primitives
 @import '../../../common/buttons.scss';
 @import '../../../common/inputs.scss';
+@import '../../../form_elements/src/includes/text-fields.scss';
 
 //header
 @import '../../../headers_footers/src/includes/headers/navigation.scss';
+
+//datepicker (search form)
+@import '../../../cards/src/includes/search-form.scss';
+
+//footer
+@import '../../../headers_footers/src/includes/footers/widget.scss';
+@import '../../../headers_footers/src/includes/footers/copybar.scss';
 
 //fonts
 @font-face {
@@ -21,6 +29,38 @@
 	font-family: 'Montserrat';
 	src: url('fonts/Montserrat-Bold.eot');
 	src: local('☺'), url('fonts/Montserrat-Bold.woff') format('woff'), url('fonts/Montserrat-Bold.ttf') format('truetype'), url('fonts/Montserrat-Bold.svg') format('svg');
+	font-weight: 700;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Quicksand';
+	src: url('fonts/Quicksand-Regular.eot');
+	src: local('☺'), url('fonts/Quicksand-Regular.woff') format('woff'), url('fonts/Quicksand-Regular.ttf') format('truetype'), url('fonts/Quicksand-Regular.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Quicksand';
+	src: url('fonts/Quicksand-Bold.eot');
+	src: local('☺'), url('fonts/Quicksand-Bold.woff') format('woff'), url('fonts/Quicksand-Bold.ttf') format('truetype'), url('fonts/Quicksand-Bold.svg') format('svg');
+	font-weight: 700;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'OpenSans';
+	src: url('fonts/OpenSans-Regular.eot');
+	src: local('☺'), url('fonts/OpenSans-Regular.woff') format('woff'), url('fonts/OpenSans-Regular.ttf') format('truetype'), url('fonts/OpenSans-Regular.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'OpenSans';
+	src: url('fonts/OpenSans-Bold.eot');
+	src: local('☺'), url('fonts/OpenSans-Bold.woff') format('woff'), url('fonts/OpenSans-Bold.ttf') format('truetype'), url('fonts/OpenSans-Bold.svg') format('svg');
 	font-weight: 700;
 	font-style: normal;
 }
@@ -76,4 +116,47 @@
 			@include purple-button-hover;
 		}
     }
+}
+.landing-page {
+	max-width: 1440px;
+	height: 891px;
+	background: url('../src/img/background-photo.png');
+	background-repeat: no-repeat;
+	&__content {
+		max-width: 1168px;
+		margin: 70px auto 18px;
+		height: 740px; 
+		display: flex;
+		justify-content: space-between;
+	}
+	&__datepicker {
+		align-self: flex-start;
+		background-color: #FFFFFF;
+	}
+	&__description {
+		align-self: flex-end;
+		text-align: right;
+		max-width: 280px;
+		@include body-text;
+	}
+}
+.footer {
+	max-width: 1440px;
+	&__widget {
+		height: 372px;
+		margin: 0 auto;
+		padding: 108px 140px;
+		background: #FFFFFF;
+		box-shadow: 0px 1px 0px rgba(31, 32, 65, 0.1);
+	}
+	&__copybar {
+		height: 70px;
+		margin: 1px auto;
+		padding: 0 140px;
+		background: #FFFFFF;
+		box-shadow: 0px 1px 0px rgba(31, 32, 65, 0.05);
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
 }
