cards page update

--- a/cards/src/includes/datepicker-calendar.pug
+++ b/cards/src/includes/datepicker-calendar.pug
@@ -1,5 +1,6 @@
 script(src="https://code.jquery.com/jquery-1.12.4.js")
 script(src="./js/datepicker.js")
 .datepicker-calendar
-    .datepicker-here(data-range='true')
+    .datepicker-calendar__card.datepicker-here(data-range='true')
+        .datepicker-calendar__submit применить
 
