--- a/pages/Landing_page/src/index.pug
+++ b/pages/Landing_page/src/index.pug
@@ -7,36 +7,15 @@ html(lang="en")
         script(src="./main.js")
         script(src="https://code.jquery.com/jquery-1.12.4.js")
         script(src="./js/datepicker.js")
-    header.header
-        include ../../../common/header-navigation-mixins
-        .header__content
-            .header__menu
-                .header__logo
-                    img(src='img/logo.svg', alt='logo').logo
-            .header__navigation
-                nav.navigation
-                    ul.navigation__list
-                        +navigation-menu('о нас', '#')
-                        +navigation-menu-sub('услуги', '#')
-                        +navigation-menu('вакансии', '#')
-                        +navigation-menu('новости', '#')
-                        +navigation-menu-sub('соглашения', '#')
-            .header__buttons
-                .header__item
-                    a(href="#").header__sign-in войти
-                .header__item
-                    a(href="#").header__registration зарегистрироваться
-        
+    header
+        include ../../../common/header   
     body.landing-page
         .landing-page__content
             .landing-page__datepicker
                 include ../../../cards/src/includes/search-form
                 script(src="./js/dropdown.js")
             .landing-page__description Лучшие номера для вашей работы, отдыха и просто вдохновения
-    footer.footer
-        .footer__widget
-            include ../../../headers_footers/src/includes/footers/widget
-        .footer__copybar
-            include ../../../headers_footers/src/includes/footers/copybar
+    footer
+    include ../../../common/footer
     
         
