header and footer responsive

--- a/common/footer.pug
+++ b/common/footer.pug
@@ -1,5 +1,6 @@
-.footer
-    .footer__widget
+.widget
+    .widget__content
         include ../headers_footers/src/includes/footers/widget
-    .footer__copybar
+.copybar
+    .copybar__content
         include ../headers_footers/src/includes/footers/copybar
