--- a/common/footer.scss
+++ b/common/footer.scss
@@ -1,18 +1,30 @@
-.footer {
+@import '../headers_footers/src/includes/footers/widget.scss';
+@import '../headers_footers/src/includes/footers/copybar.scss';
+
+.widget-footer {
 	max-width: 1440px;
-	&__widget {
-		height: 372px;
-		margin: 0 auto;
-		padding: 108px 140px;
-		background: #FFFFFF;
-		box-shadow: 0px 1px 0px rgba(31, 32, 65, 0.1);
+	height: 372px;
+	margin: auto;
+	background: #FFFFFF;
+	box-shadow: 0px 1px 0px rgba(31, 32, 65, 0.1);
+	border: 1px solid transparent;
+	&__content {    
+		max-width: 1165px;
+		width: 100%;
+		margin: 7% auto;
 	}
-	&__copybar {
-		height: 70px;
-		margin: 1px auto;
-		padding: 0 140px;
-		background: #FFFFFF;
-		box-shadow: 0px 1px 0px rgba(31, 32, 65, 0.05);
+}
+.copybar {
+	margin: 1px auto;
+	max-width: 1440px;
+	height: 70px;
+	background: #FFFFFF;
+	box-shadow: 0px 10px 20px $dark-shade-05-color;	
+	&__content	{
+		max-width: 1160px;
+		height: 100%;
+		width: 100%;
+		margin: auto;
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
