--- a/common/header.scss
+++ b/common/header.scss
@@ -1,3 +1,4 @@
+@import '../headers_footers/src/includes/headers/navigation.scss';
 .header {
     max-width: 1440px;
 	height: 70px;
@@ -8,7 +9,6 @@
 	&__content	{
 		max-width: 1163px;
 		height: 100%;
-		width: 100%;
 		
 		margin: auto;
 		display: flex;
