--- a/headers_footers/src/includes/footers/widget.scss
+++ b/headers_footers/src/includes/footers/widget.scss
@@ -1,7 +1,10 @@
 .widget-footer {
-    display: flex;
-    justify-content: space-between;
-    @include body-text;
+    max-width: 1440px;
+    &__content {
+        display: flex;
+        justify-content: space-between;
+        @include body-text;
+    }
     &__information {
         width: 260px;
         .logo {
