--- a/cards/src/includes/calc-price.scss
+++ b/cards/src/includes/calc-price.scss
@@ -1,3 +1,4 @@
+@import "../../../form_elements/src/includes/dropdown.scss";
 .calc-price{
     max-width: 380px;
     padding: 40px 30px 30px 30px;
@@ -164,4 +165,3 @@
         }
     }
 }
-
