--- a/form_elements/src/includes/benefits.pug
+++ b/form_elements/src/includes/benefits.pug
@@ -1,13 +1,5 @@
+include ../../../common/benefits-mixins
+
 .benefits
-    .benefits__option
-        img(src="./img/insert_emoticon.svg", alt="comfort").benefits__emoticon
-        .benefits__text
-            .benefits__title Комфорт
-            .benefits__description Шумопоглощающие стены
-        .benefits__split
-    .benefits__option
-        img(src="./img/location_city.svg", alt="location").benefits__location
-        .benefits__text
-            .benefits__title Удобство
-            .benefits__description Окно в каждой из спален
-        .benefits__split
+    +benefit("./img/insert_emoticon.svg", "comfort", "Комфорт", "Шумопоглощающие стены", "yes")
+    +benefit("./img/location_city.svg", "location", "Удобство", "Окно в каждой из спален", "yes")
